# CodeWiki

./: CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt
codewiki/: __init__.py  config.py
codewiki/analyzer/: __init__.py  ast_parser.py  dependency_graphs_builder.py  query_analyzer.py  topo_sort.py
codewiki/analyzer/analysis/: __init__.py  analysis_service.py  call_graph_analyzer.py  cloning.py  repo_analyzer.py
codewiki/analyzer/languages/: __init__.py  c.py  cpp.py  csharp.py  golang.py  java.py  javascript.py  php.py  python.py  typescript.py  vue.py
codewiki/analyzer/models/: __init__.py  analysis.py  core.py
codewiki/analyzer/queries/: cpp.scm  go.scm  php.scm  python.scm  typescript.scm
codewiki/analyzer/utils/: __init__.py  logging_config.py
codewiki/cli/: config_manager.py  main.py
codewiki/cli/adapters/: doc_generator.py
codewiki/cli/commands/: config.py  generate.py
codewiki/cli/models/: config.py  job.py
codewiki/cli/utils/: errors.py  fs.py  instructions.py  repo_validator.py  validation.py
codewiki/reporting/: __init__.py  arch_rules.py  codebase_map_generator.py  complexity_scorer.py  graph_metrics.py  graph_viewer_generator.py  temporal_coupling.py  tfidf_keywords.py
codewiki/src/: config.py
codewiki/src/be/: agent_orchestrator.py  arch_rules.py  claude_agent_sdk_adapter.py  cluster_modules.py  codebase_map_generator.py  complexity_scorer.py  content_cache.py  documentation_generator.py  graph_metrics.py  graph_viewer_generator.py  llm_services.py  prompt_template.py  temporal_coupling.py  tfidf_keywords.py  utils.py
codewiki/src/be/agent_tools/: generate_sub_module_documentations.py  read_code_components.py  str_replace_editor.py
codewiki/src/fe/: background_worker.py  github_processor.py  routes.py  visualise_docs.py  web_app.py
docs/: Agent Backend.md  Analysis Services.md  CLI Application.md  CODEBASE_MAP.md  Component Extraction.md  Core Graph Processing.md  Data Models - Analysis Models.md  Data Models.md  Dependency Analyzer.md  Graph Algorithms.md  Graph Building.md  Language Analyzers.md  Logging Utilities.md  Shared Utilities.md  Web Frontend - Background Processing.md  Web Frontend - Cache Management.md  Web Frontend - GitHub Processing.md  Web Frontend - Template Utilities.md  Web Frontend - Web Routes.md  Web Frontend.md  Web_Frontend.md  adapters.md  config_management.md  data_models_core_models.md  dependency_analyzer.md  first_module_tree.json  index.html  metadata.json  module_tree.json  overview.md  shared_utilities.md
docs/plans/: 2026-02-13-vue3-analyzer-design.md  2026-02-13-vue3-analyzer-plan.md
example/src/: __init__.py  api.py  models.py  notifications.py  repository.py  service.py
tests/: test_vue_analyzer.py
(+18 files in other folders)
