[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codewiki"
version = "2.0.0"
description = "Static analysis for codebases — dependency graphs, metrics, and architectural reports"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "CodeWiki Contributors"}
]
keywords = ["code-analysis", "static-analysis", "dependency-graph", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-language-pack>=0.8.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.21.4",
    "tree-sitter-typescript>=0.21.2",
    "tree-sitter-c>=0.21.4",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-go>=0.23.4",
    "pydantic>=2.11.7",
    "networkx>=3.5",
    "python-louvain>=0.16",
    "scikit-learn>=1.3.0",
    "lizard>=1.17.0",
    "radon>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
codewiki = "codewiki.cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/codewiki"
Repository = "https://github.com/yourusername/codewiki"
Issues = "https://github.com/yourusername/codewiki/issues"

[tool.setuptools]
packages = [
    "codewiki",
    "codewiki.cli",
    "codewiki.cli.commands",
    "codewiki.cli.models",
    "codewiki.cli.utils",
    "codewiki.analyzer",
    "codewiki.analyzer.analysis",
    "codewiki.analyzer.languages",
    "codewiki.analyzer.models",
    "codewiki.analyzer.utils",
    "codewiki.reporting",
]

[tool.setuptools.package-data]
codewiki = ["py.typed", "analyzer/queries/*.scm"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=codewiki --cov-report=term-missing"
asyncio_mode = "auto"
